// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Pill"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    class="Pill__label"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with a close button 1`] = `
<div
  class="Pill my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    class="Pill__label"
    title="test"
  >
    test
  </span>
  <button
    aria-label="close"
    class="Pill__close-button"
    type="button"
  >
    <span
      class="TabFocusTrap"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--muted Pill__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 18 18"
        width="1em"
      >
        <path
          d="M14.0303 5.03033C14.3232 4.73744 14.3232 4.26256 14.0303 3.96967C13.7374 3.67678 13.2626 3.67678 12.9697 3.96967L9 7.93934L5.03033 3.96967C4.73744 3.67678 4.26256 3.67678 3.96967 3.96967C3.67678 4.26256 3.67678 4.73744 3.96967 5.03033L7.93934 9L3.96967 12.9697C3.67678 13.2626 3.67678 13.7374 3.96967 14.0303C4.26256 14.3232 4.73744 14.3232 5.03033 14.0303L9 10.0607L12.9697 14.0303C13.2626 14.3232 13.7374 14.3232 14.0303 14.0303C14.3232 13.7374 14.3232 13.2626 14.0303 12.9697L10.0607 9L14.0303 5.03033Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component with a dragging handle 1`] = `
<div
  class="Pill my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    class="Pill__drag-icon"
  >
    <svg
      class="Icon Icon--small Icon--muted Pill__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </span>
  <span
    aria-label="test"
    class="Pill__label"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with a test id 1`] = `
<div
  class="Pill my-extra-class"
  data-test-id="test-id"
>
  <span
    aria-label="test"
    class="Pill__label"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Pill my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    class="Pill__label"
    title="test"
  >
    test
  </span>
</div>
`;
